lombok + CalculateFee